# docs/nodeDocs/controllers/Auth.js
@@ -1,14 +1,0 @@
-'use strict';
-
-var utils = require('../utils/writer.js');
-var Auth = require('../service/AuthService');
-
-module.exports.authenticate = function authenticate (req, res, next, body) {
-  Auth.authenticate(body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
